# hy-cli

./: Cargo.toml  README.md
.github/workflows/: openwrt.yaml
crates/core/: Cargo.toml
crates/core/src/: db.rs  env.rs  exchange.rs  info.rs  lib.rs  msgpack.rs  paths.rs  prompt.rs  signer.rs  ws.rs
crates/hl/: Cargo.toml
crates/hl/src/: cli.rs  format.rs  main.rs  server_cmd.rs  trade.rs  watch.rs  watch_server.rs
crates/server/: Cargo.toml
crates/server/src/: client.rs  control.rs  daemon.rs  lib.rs  proto.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
