[package]
name = "hl-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

description = "Core library for hl CLI: config, paths, db, http/ws clients, types"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
dirs.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
tracing.workspace = true
hex.workspace = true
rpassword.workspace = true
tiny-keccak.workspace = true
rmpv.workspace = true
ethers-core.workspace = true
ethers-signers.workspace = true
