[package]
name = "hl-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

description = "Background websocket cache server for hl CLI"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
libc = "0.2"

hl-core = { path = "../core" }
