[package]
name = "hl-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

description = "Terminal UI components for hl watch mode"

[dependencies]
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
